--- a/app/views/partials/_global_nav.html.haml
+++ b/app/views/partials/_global_nav.html.haml
@@ -38,7 +38,7 @@
             %li= link_to 'Supplies', country_supplies_path
             %li= link_to 'Requests', manage_orders_path
             %li= link_to 'Responses', responses_path
-            %li= link_to 'Reports', reports_path
+            %li.report1= link_to 'Reports', reports_path
             -# Inline the gear menu when collapsed
             %li.collapsed-only= link_to 'Help', help_path
             - if policy(:message_sender).new?
@@ -52,6 +52,7 @@
             %a.dropdown-toggle{"data-toggle" => "dropdown", href: "#"}
               %i.fa.fa-cog
             %ul.dropdown-menu
+              %li.report2= link_to 'Reports', reports_path
               %li= link_to 'Help', help_path
               - if policy(:message_sender).new?
                 %li= link_to 'Messages', new_message_path
